objects/QIDC__Journey_ims__c.object
<CustomObject>
    <description>The Journey object is used to store information (that will be imported from a 3rd party) about marketing programs. These are the necessary record types to track information relating to the marketing efforts.</description>
    <fields>
        <fullName>QIDC__Description_ims__c</fullName>
        <description>A description of the Journey.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__Email_Subject_ims__c</fullName>
        <description>The subject of the Email.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__IntegrationID_ims__c</fullName>
        <description>External ID which is used for data loading only.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Integration ID</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QIDC__Name_ims__c</fullName>
        <description>The name of the Journey.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Parent_Id_ims__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Parent ID of the Journey Node.</description>
        <label>Parent ID</label>
        <referenceTo>QIDC__Journey_ims__c</referenceTo>
        <relationshipLabel>Journeys</relationshipLabel>
        <relationshipName>Journeys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QIDC__Status_ims__c</fullName>
        <description>The status of the Journey (Draft(1), Launched(2), Paused(3), or Stopped(4)).</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Launched</fullName>
                </value>
                <value>
                    <fullName>Paused</fullName>
                </value>
                <value>
                    <fullName>Stopped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__Type_ims__c</fullName>
        <description>The type of Journey Node such as Start(2), Decision(4), Email(5), Delay(6), End(8), ActivityLog(9), DirectMail(10), SalesRepEmail(1000)</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Start</fullName>
                </value>
                <value>
                    <fullName>Decision</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Delay</fullName>
                </value>
                <value>
                    <fullName>End</fullName>
                </value>
                <value>
                    <fullName>ActivityLog</fullName>
                </value>
                <value>
                    <fullName>DirectMail</fullName>
                </value>
                <value>
                    <fullName>SalesRepEmail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Journey</label>
    <listViews>
        <fullName>QIDC__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>QIDC__IntegrationID_ims__c</columns>
        <columns>QIDC__Name_ims__c</columns>
        <columns>QIDC__Parent_Id_ims__c</columns>
        <columns>QIDC__Status_ims__c</columns>
        <columns>QIDC__Type_ims__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>QIDC__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JRN-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journeys</pluralLabel>
    <recordTypes>
        <fullName>QIDC__Email_ims</fullName>
        <active>true</active>
        <label>Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>QIDC__Journey_Node_ims</fullName>
        <active>true</active>
        <label>Journey Node</label>
    </recordTypes>
    <recordTypes>
        <fullName>QIDC__Journey_ims</fullName>
        <active>true</active>
        <label>Journey</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>